--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,19 @@ a{
     text-decoration: none;
     font-weight: bold;
 }
-h1, h2, h3, h4{
+h1, h2{
     font-family: var(--fuenteHeading);
     line-height: 1.2;
+}
+h2{
+    color: var(--colorPrimario);
+    font-size: var(--fuenteHeading);
+    font-size: 2rem;
+    font-weight: bold;
+    text-shadow:.1rem .1rem .1rem firebrick;
+}
+p{
+    font-family: var(--fuenteParrafos);
 }
 
 /* header */
@@ -68,43 +78,47 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100
     flex-direction: column;
     gap: 1.5rem;
 }
-.header--nav a{
+.enlace{
     font-size: 1.5rem;
-    text-align: center;
     color: var(--negro);
     background-color: #ffffff;
     padding: .3rem 1rem;
+    font-family: cursive;
+    display: flex;
+    justify-content: center;
 }
-.header--nav a:hover{
+.enlace:hover{
     background-color: var(--animacion);
     color: var(--blanco);
     transition: all .6s;
 }
-
-/* contenedor */
-.contenedor--article{
-    text-align: center;
-    border: solid ;
-    padding: 0 1rem;
-}
-
+/* modo tablet */
 @media (min-width: 768px) {
     .header{
-    background: rgb(238,174,202);
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    }
-    .header--fondo{
-        height: 15rem;
-    }
-    .header--nav{
-        flex-direction: row;
-    }
-    .header--nav a{
-        font-size: 2rem;
-        padding: 0  2rem;
-    }
+        background: rgb(238,174,202);
+        background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+        }
+        .header--fondo{
+            height: 15rem;
+        }
+        .header--nav{
+            flex-direction: row;
+        }
+        .header--nav a{
+            font-size: 2rem;
+            padding: 0  2rem;
+        }
+    
 }
+/* modo pc */
 @media (min-width: 1220px) {
+    h2{
+        font-size: 3rem;
+    }
+    p{
+        font-size: 2rem;
+    }
+
     .header{
     
     background: rgb(34,193,195);
@@ -116,4 +130,136 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100
         width: 65%;
         margin: 0 auto;
     }
+    
+}
+
+/* contenedor */
+.contenedor--article{
+    text-align: center;
+    /* border: solid ; */
+    border-top: inset;
+    padding: 0 1rem;
+}
+.contenedor--article:hover{
+    transition: .5s;
+    background-color: var(--blanco);
+}
+.contenedor >div{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+.contenedor >div img{
+    width: 100%;
+}
+
+/* CONTENEDOR MAIN  */
+.contenedor--main{
+    text-align: center;
+    border: inset;
+    padding: 0 1rem ;
+}
+.contenedor--main img{
+    width: 100%;
+}
+.modificar{
+    padding: 1rem;
+}
+.modificar span{
+    color: blue;
+    text-shadow: .1rem .1rem 1rem white;
+}
+
+/* modo tablet */
+@media (min-width: 768px) {
+    .contenedor{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+    .contenedor--article{
+        border: none;
+        border: outset;
+    }
+    /* modiendo las imagenes de posiciones */
+    .contenedor--main{
+        grid-row: 1 / 3;
+    }
+    .internetCosas{
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+    }
+    .computacionNube{
+        grid-row: 5 / 6;
+        grid-column: 1 / 2;
+    }
+    .energiasRenovables{
+        grid-row: 7 / 8;
+        grid-column: 1 / 2;
+    }
+
+}
+
+/* modo pc */
+@media (min-width: 1220px) {
+    
+    /* contenedor */
+    .contenedor{
+        gap: 2rem;
+        padding: 1rem;
+    }
+    .contenedor--main{
+        grid-column: 1 / 3;
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 1fr 6fr;
+        align-items: center;
+        padding: 0 2rem;
+    }.contenedor--main h2{
+        grid-column: 1 / 3;
+    }
+    .contenedor--main .parrafos{
+        grid-column: 2 / 3;
+        
+    }
+    .contenedor--main img{
+        width: 70%;
+        grid-row: 2 / 3;
+        margin: auto;
+        filter: saturate(0%);
+    }
+    .modificar{
+        font-size: 2rem;
+    }
+    .contenedor div img{
+        width: 60%;
+    }
+    /* modiendo las imagenes de posiciones */
+    .internetCosas{
+        grid-row: 4 / 5;
+    }
+    .computacionNube{
+        grid-row: 6 / 7;
+    }
+    .energiasRenovables{
+        grid-row: 8 / 9;
+    }
+    .contenedor >div img{
+        width: auto;
+    }
+}
+
+/* footer */
+.footer--redesSociales{
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+}
+.footer--imagen{
+    width: 100%;
+    height: 15rem;
+    background-image: url("../img/baneer.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
