--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100
 
 /* PAGINA, COSAS QUE NO SABIAS */
 /* header */
-.modificar{
+.modificar--header{
     height: 40rem;
 }
 .cambioFondo{
